Make sure JMeter works with Java 21