@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 # Edit the JMeter load test
 
-assertJavaVersion17() {
+assertJavaVersion21() {
   # `java --full-version` will print one line to standard out containing a prefix and the "Version String". See https://openjdk.java.net/jeps/223
   # There's a regular expression in the document, but it is not practical to use. Instead, we are simply interested in
   # the Java MAJOR version. Java releases follow the MAJOR.MINOR.SECURITY pattern EXCEPT for early access releases which
@@ -10,8 +10,8 @@ assertJavaVersion17() {
   VERSION_OUTPUT=$("$JAVA_HOME/bin/java" --full-version)
   if [[ $VERSION_OUTPUT =~ ([0-9]+) ]]; then
     local major=${BASH_REMATCH[1]}
-    if [[ $major != 17 ]]; then
-      echo >&2 "Requires Java 17 but found Java $major"
+    if [[ $major != 21 ]]; then
+      echo >&2 "Requires Java 21 but found Java $major"
       exit 1
     fi
   else
@@ -20,7 +20,6 @@ assertJavaVersion17() {
   fi
 }
 
-assertJavaVersion17
+assertJavaVersion21
 
-export JVM_ARGS="-Dnashorn.args=--no-deprecation-warning --enable-preview"
-jmeter -t test-plan.jmx
+jmeter --testfile test-plan.jmx
